syntax = "proto3";
import "DTO/statistics_data.proto";

option csharp_namespace = "Proto.Requests.StatisticsData";

package contract.requests;

message GetStatisticsDataByTimeSlotIdRequestProto {
  string time_slot_id = 1;
}

service StatisticsDataRequestService {
  rpc GetStatisticsDataByTimeSlotId(GetStatisticsDataByTimeSlotIdRequestProto) returns (StatisticsDataProto);
}
